--- a/app/index.html
+++ b/app/index.html
@@ -2054,22 +2054,22 @@
               </span>
               <span class="lite rate">
                 <span class="rate__name">лайт</span>
-                <span class="rate__price">20 000</span>
+                <span class="rate__price">20 000 &#8381;</span>
                 <span class="rate__info">До 3 правок</span>
               </span>
               <span class="standart rate">
                 <span class="rate__name">стандарт</span>
-                <span class="rate__price">35 000</span>
+                <span class="rate__price">35 000 &#8381;</span>
                 <span class="rate__info">До 5 правок</span>
               </span>
               <span class="premium rate">
                 <span class="rate__name">премиум</span>
-                <span class="rate__price">50 000</span>
+                <span class="rate__price">50 000 &#8381;</span>
                 <a href="#" class="rate__info-link">Почему это выгодно</a>
               </span>
               <span class="express rate">
                 <span class="rate__name">экспресс</span>
-                <span class="rate__price">10 000</span>
+                <span class="rate__price">10 000 &#8381;</span>
                 <span class="rate__info">Без возможности правок</span>
               </span>
             </div>
@@ -2102,7 +2102,7 @@
             </li>
             <li class="prices__item">
               <span class="prices__item-name">
-                Анализ Вашего сайта и бизнеса
+                Поисковые рекламные кампании
               </span>
               <span class="lite"><img src="img/clients/check-mark.svg" alt=""></span>
               <span class="standart"><img src="img/clients/check-mark.svg" alt=""></span>
@@ -2111,7 +2111,7 @@
             </li>
             <li class="prices__item">
               <span class="prices__item-name">
-                Анализ Вашего сайта и бизнеса
+                Рекламные кампании для Сетей
               </span>
               <span class="lite"><img src="img/clients/check-mark.svg" alt=""></span>
               <span class="standart"><img src="img/clients/check-mark.svg" alt=""></span>
@@ -2120,7 +2120,7 @@
             </li>
             <li class="prices__item">
               <span class="prices__item-name">
-                Анализ Вашего сайта и бизнеса
+                Подготовка списка минус-слов
               </span>
               <span class="lite"><img src="img/clients/check-mark.svg" alt=""></span>
               <span class="standart"><img src="img/clients/check-mark.svg" alt=""></span>
@@ -2129,7 +2129,7 @@
             </li>
             <li class="prices__item">
               <span class="prices__item-name">
-                Анализ Вашего сайта и бизнеса
+                Кластеризация семантического ядра
               </span>
               <span class="lite"><img src="img/clients/check-mark.svg" alt=""></span>
               <span class="standart"><img src="img/clients/check-mark.svg" alt=""></span>
@@ -2138,7 +2138,7 @@
             </li>
             <li class="prices__item">
               <span class="prices__item-name">
-                Анализ Вашего сайта и бизнеса
+                UTM-разметка рекламных кампаний
               </span>
               <span class="lite"><img src="img/clients/check-mark.svg" alt=""></span>
               <span class="standart"><img src="img/clients/check-mark.svg" alt=""></span>
@@ -2147,7 +2147,7 @@
             </li>
             <li class="prices__item">
               <span class="prices__item-name">
-                Анализ Вашего сайта и бизнеса
+                Мониторинг и управление ставками
               </span>
               <span class="lite"><img src="img/clients/check-mark.svg" alt=""></span>
               <span class="standart"><img src="img/clients/check-mark.svg" alt=""></span>
@@ -2156,162 +2156,192 @@
             </li>
             <li class="prices__item">
               <span class="prices__item-name">
-                Анализ Вашего сайта и бизнеса
+                Корректировки и доработки рекламных кампаний
               </span>
               <span class="lite"><img src="img/clients/check-mark.svg" alt=""></span>
               <span class="standart"><img src="img/clients/check-mark.svg" alt=""></span>
               <span class="premium"><img src="img/clients/check-mark.svg" alt=""></span>
-              <span class="express"><img src="img/clients/check-mark.svg" alt=""></span>
+              <span class="express"><img src="img/prices/line.svg" alt=""></span>
             </li>
             <li class="prices__item">
               <span class="prices__item-name">
-                Анализ Вашего сайта и бизнеса
+                Настройка ремаркетинга и ретаргетинга
               </span>
               <span class="lite"><img src="img/clients/check-mark.svg" alt=""></span>
-              <span class="standart"><img src="img/clients/check-mark.svg" alt=""></span>
+              <span class="standart"><img src="img/prices/line.svg" alt=""></span>
               <span class="premium"><img src="img/clients/check-mark.svg" alt=""></span>
-              <span class="express"><img src="img/clients/check-mark.svg" alt=""></span>
+              <span class="express"><img src="img/prices/line.svg" alt=""></span>
             </li>
             <li class="prices__item">
               <span class="prices__item-name">
-                Анализ Вашего сайта и бизнеса
+                Установка счетчиков веб-аналитики
               </span>
-              <span class="lite"><img src="img/clients/check-mark.svg" alt=""></span>
+              <span class="lite"><img src="img/prices/line.svg" alt=""></span>
               <span class="standart"><img src="img/clients/check-mark.svg" alt=""></span>
               <span class="premium"><img src="img/clients/check-mark.svg" alt=""></span>
-              <span class="express"><img src="img/clients/check-mark.svg" alt=""></span>
+              <span class="express"><img src="img/prices/line.svg" alt=""></span>
             </li>
             <li class="prices__item">
               <span class="prices__item-name">
-                Анализ Вашего сайта и бизнеса
+                Настройка целевых действий и конверсий
               </span>
-              <span class="lite"><img src="img/clients/check-mark.svg" alt=""></span>
+              <span class="lite"><img src="img/prices/line.svg" alt=""></span>
               <span class="standart"><img src="img/clients/check-mark.svg" alt=""></span>
               <span class="premium"><img src="img/clients/check-mark.svg" alt=""></span>
-              <span class="express"><img src="img/clients/check-mark.svg" alt=""></span>
+              <span class="express"><img src="img/prices/line.svg" alt=""></span>
             </li>
             <li class="prices__item">
               <span class="prices__item-name">
-                Анализ Вашего сайта и бизнеса
+                Отдельные десктопные и мобильные рекламные кампании
               </span>
-              <span class="lite"><img src="img/clients/check-mark.svg" alt=""></span>
-              <span class="standart"><img src="img/clients/check-mark.svg" alt=""></span>
+              <span class="lite"><img src="img/prices/line.svg" alt=""></span>
+              <span class="standart"><img src="img/prices/line.svg" alt=""></span>
               <span class="premium"><img src="img/clients/check-mark.svg" alt=""></span>
-              <span class="express"><img src="img/clients/check-mark.svg" alt=""></span>
+              <span class="express"><img src="img/prices/line.svg" alt=""></span>
             </li>
             <li class="prices__item">
               <span class="prices__item-name">
-                Анализ Вашего сайта и бизнеса
+                Разработка Look-Alike рекламных кампаний
               </span>
-              <span class="lite"><img src="img/clients/check-mark.svg" alt=""></span>
-              <span class="standart"><img src="img/clients/check-mark.svg" alt=""></span>
+              <span class="lite"><img src="img/prices/line.svg" alt=""></span>
+              <span class="standart"><img src="img/prices/line.svg" alt=""></span>
               <span class="premium"><img src="img/clients/check-mark.svg" alt=""></span>
-              <span class="express"><img src="img/clients/check-mark.svg" alt=""></span>
+              <span class="express"><img src="img/prices/line.svg" alt=""></span>
             </li>
             <li class="prices__item">
               <span class="prices__item-name">
-                Анализ Вашего сайта и бизнеса
+                Установка счетчиков веб-аналитики
               </span>
-              <span class="lite"><img src="img/clients/check-mark.svg" alt=""></span>
-              <span class="standart"><img src="img/clients/check-mark.svg" alt=""></span>
+              <span class="lite"><img src="img/prices/line.svg" alt=""></span>
+              <span class="standart"><img src="img/prices/line.svg" alt=""></span>
               <span class="premium"><img src="img/clients/check-mark.svg" alt=""></span>
-              <span class="express"><img src="img/clients/check-mark.svg" alt=""></span>
+              <span class="express"><img src="img/prices/line.svg" alt=""></span>
             </li>
             <li class="prices__item">
               <span class="prices__item-name">
-                Анализ Вашего сайта и бизнеса
+                Установка и настройка Google Tag Manager
               </span>
-              <span class="lite"><img src="img/clients/check-mark.svg" alt=""></span>
-              <span class="standart"><img src="img/clients/check-mark.svg" alt=""></span>
+              <span class="lite"><img src="img/prices/line.svg" alt=""></span>
+              <span class="standart"><img src="img/prices/line.svg" alt=""></span>
               <span class="premium"><img src="img/clients/check-mark.svg" alt=""></span>
-              <span class="express"><img src="img/clients/check-mark.svg" alt=""></span>
+              <span class="express"><img src="img/prices/line.svg" alt=""></span>
             </li>
             <li class="prices__item">
               <span class="prices__item-name">
-                Анализ Вашего сайта и бизнеса
+                Углубленная веб-аналитика сайта
               </span>
-              <span class="lite"><img src="img/clients/check-mark.svg" alt=""></span>
-              <span class="standart"><img src="img/clients/check-mark.svg" alt=""></span>
+              <span class="lite"><img src="img/prices/line.svg" alt=""></span>
+              <span class="standart"><img src="img/prices/line.svg" alt=""></span>
               <span class="premium"><img src="img/clients/check-mark.svg" alt=""></span>
-              <span class="express"><img src="img/clients/check-mark.svg" alt=""></span>
+              <span class="express"><img src="img/prices/line.svg" alt=""></span>
             </li>
             <li class="prices__item">
               <span class="prices__item-name">
-                Анализ Вашего сайта и бизнеса
+                Настройка пользовательских и аудиторных сегментов
               </span>
-              <span class="lite"><img src="img/clients/check-mark.svg" alt=""></span>
-              <span class="standart"><img src="img/clients/check-mark.svg" alt=""></span>
+              <span class="lite"><img src="img/prices/line.svg" alt=""></span>
+              <span class="standart"><img src="img/prices/line.svg" alt=""></span>
               <span class="premium"><img src="img/clients/check-mark.svg" alt=""></span>
-              <span class="express"><img src="img/clients/check-mark.svg" alt=""></span>
+              <span class="express"><img src="img/prices/line.svg" alt=""></span>
             </li>
             <li class="prices__item">
               <span class="prices__item-name">
-                Анализ Вашего сайта и бизнеса
+                Сопровождение в установке онлайн-чатов и др. сервисов
               </span>
-              <span class="lite"><img src="img/clients/check-mark.svg" alt=""></span>
-              <span class="standart"><img src="img/clients/check-mark.svg" alt=""></span>
+              <span class="lite"><img src="img/prices/line.svg" alt=""></span>
+              <span class="standart"><img src="img/prices/line.svg" alt=""></span>
               <span class="premium"><img src="img/clients/check-mark.svg" alt=""></span>
-              <span class="express"><img src="img/clients/check-mark.svg" alt=""></span>
+              <span class="express"><img src="img/prices/line.svg" alt=""></span>
             </li>
             <li class="prices__item">
               <span class="prices__item-name">
-                Анализ Вашего сайта и бизнеса
+                Сопровождение в выборе и настройке коллтрекинга
               </span>
-              <span class="lite"><img src="img/clients/check-mark.svg" alt=""></span>
-              <span class="standart"><img src="img/clients/check-mark.svg" alt=""></span>
+              <span class="lite"><img src="img/prices/line.svg" alt=""></span>
+              <span class="standart"><img src="img/prices/line.svg" alt=""></span>
               <span class="premium"><img src="img/clients/check-mark.svg" alt=""></span>
-              <span class="express"><img src="img/clients/check-mark.svg" alt=""></span>
+              <span class="express"><img src="img/prices/line.svg" alt=""></span>
             </li>
             <li class="prices__item">
               <span class="prices__item-name">
-                Анализ Вашего сайта и бизнеса
+                Рекомендации по оптимизации Вашего сайта
               </span>
-              <span class="lite"><img src="img/clients/check-mark.svg" alt=""></span>
-              <span class="standart"><img src="img/clients/check-mark.svg" alt=""></span>
+              <span class="lite"><img src="img/prices/line.svg" alt=""></span>
+              <span class="standart"><img src="img/prices/line.svg" alt=""></span>
               <span class="premium"><img src="img/clients/check-mark.svg" alt=""></span>
-              <span class="express"><img src="img/clients/check-mark.svg" alt=""></span>
+              <span class="express"><img src="img/prices/line.svg" alt=""></span>
             </li>
             <li class="prices__item">
               <span class="prices__item-name">
-                Анализ Вашего сайта и бизнеса
+                Количество ключевых слов
               </span>
-              <span class="lite"><img src="img/clients/check-mark.svg" alt=""></span>
-              <span class="standart"><img src="img/clients/check-mark.svg" alt=""></span>
-              <span class="premium"><img src="img/clients/check-mark.svg" alt=""></span>
-              <span class="express"><img src="img/clients/check-mark.svg" alt=""></span>
+              <span class="lite">от 50 до 150</span>
+              <span class="standart">от 150 до 300</span>
+              <span class="premium">от 300</span>
+              <span class="express">до 100</span>
             </li>
             <li class="prices__item">
               <span class="prices__item-name">
-                Анализ Вашего сайта и бизнеса
+                Количество рекламных объявлений
               </span>
-              <span class="lite"><img src="img/clients/check-mark.svg" alt=""></span>
-              <span class="standart"><img src="img/clients/check-mark.svg" alt=""></span>
-              <span class="premium"><img src="img/clients/check-mark.svg" alt=""></span>
-              <span class="express"><img src="img/clients/check-mark.svg" alt=""></span>
+              <span class="lite">от 300 до 900</span>
+              <span class="standart">от 300 до 1800</span>
+              <span class="premium">от 1800 до 6000</span>
+              <span class="express">до 500</span>
             </li>
             <li class="prices__item">
               <span class="prices__item-name">
-                Анализ Вашего сайта и бизнеса
+                Время разработки
               </span>
-              <span class="lite"><img src="img/clients/check-mark.svg" alt=""></span>
-              <span class="standart"><img src="img/clients/check-mark.svg" alt=""></span>
-              <span class="premium"><img src="img/clients/check-mark.svg" alt=""></span>
-              <span class="express"><img src="img/clients/check-mark.svg" alt=""></span>
+              <span class="lite">1-3 рабочих дней</span>
+              <span class="standart">3-5 рабочих дней</span>
+              <span class="premium">5+ рабочих дней</span>
+              <span class="express">2 рабочих дня</span>
             </li>
             <li class="prices__item">
               <span class="prices__item-name">
-                Анализ Вашего сайта и бизнеса
+                Рассрочка оплаты
               </span>
-              <span class="lite"><img src="img/clients/check-mark.svg" alt=""></span>
-              <span class="standart"><img src="img/clients/check-mark.svg" alt=""></span>
-              <span class="premium"><img src="img/clients/check-mark.svg" alt=""></span>
-              <span class="express"><img src="img/clients/check-mark.svg" alt=""></span>
+              <span class="lite"><img src="img/prices/line.svg" alt=""></span>
+              <span class="standart">до 2 платежей</span>
+              <span class="premium">до 3 платежей</span>
+              <span class="express"><img src="img/prices/line.svg" alt=""></span>
+            </li>
+            <li class="prices__item">
+              <span class="prices__item-name">
+                Дополнительный бонус
+              </span>
+              <span class="lite"></span>
+              <span class="standart"></span>
+              <span class="premium"></span>
+              <span class="express"></span>
+            </li>
+            <li class="prices__item prices__buttons">
+              <span class="prices__item-name">
+                
+              </span>
+              <span class="lite"><button class="prices__btn btn-order" data-path="order-popup">Приобрести</button></span>
+              <span class="standart"><button class="prices__btn btn-order" data-path="order-popup">Приобрести</button></span>
+              <span class="premium"><button class="prices__btn btn-order" data-path="order-popup">Приобрести</button></span>
+              <span class="express"><button class="prices__btn btn-order" data-path="order-popup">Приобрести</button></span>
             </li>
           </ul>
         </div>
       </div>
     </div>
     <div class="modals">
+      <div class="modal-overlay-order" data-target="order-popup">
+        <form action="" class="order-form">
+          <h3 class="order-form__title">Оформление заказа</h3>
+          <div class="order-form__inputs">
+            <input type="text" class="order-form__input" placeholder="Имя">
+            <input type="tel" class="order-form__input" placeholder="Телефон">
+            <input type="mail" class="order-form__input" placeholder="Email">
+          </div>
+          <button class="order-form__btn" type="submit">Отправить</button>
+          <p class="agreement">Нажав на кнопку, соглашаюсь на обработку персональных данных</p>
+        </form>
+      </div>
       <div class="modal-overlay-sertificat">
         <div class="modal modal__sertificat" data-target="sertificat-popup">
           <img src="img/sertificats/sertificat-modal.png" alt="Сертификат">
