--- a/app/index.html
+++ b/app/index.html
@@ -237,7 +237,7 @@
                           <img src="img/1.png" alt="">
                         </div>
                         <p class="name-tab__text">
-                          Просто.Чисто
+                          ПИLКИ
                         </p>
                       </div>
                       <div class="name-tab">
@@ -245,7 +245,7 @@
                           <img src="img/2.png" alt="">
                         </div>
                         <p class="name-tab__text">
-                          Неоэстетика
+                          ТВС
                         </p>
                       </div>
                       <div class="name-tab">
@@ -253,7 +253,7 @@
                           <img src="img/1.png" alt="">
                         </div>
                         <p class="name-tab__text">
-                          Просто.Чисто
+                          ТвойБассейн
                         </p>
                       </div>
                       <div class="name-tab">
@@ -261,7 +261,7 @@
                           <img src="img/1.png" alt="">
                         </div>
                         <p class="name-tab__text">
-                          Просто.Чисто
+                          Baza Dance Company
                         </p>
                       </div>
                       <div class="name-tab">
@@ -269,7 +269,7 @@
                           <img src="img/1.png" alt="">
                         </div>
                         <p class="name-tab__text">
-                          Просто.Чисто
+                          Аква Инжиниринг
                         </p>
                       </div>
                       <div class="name-tab">
@@ -2028,7 +2028,7 @@
         </div>
       </div>
     </div>
-    <div class="sertificats">
+    <!-- <div class="sertificats">
       <div class="container">
         <h2 class="sertificats__title">Сертификаты</h2>
         <div class="sertificats__inner">
@@ -2042,13 +2042,13 @@
           </div>
         </div>
       </div>
-    </div>
-    <div class="prices">
+    </div> -->
+    <div class="prices media">
       <div class="container">
         <h2 class="prices__title">Тарифы и пакеты</h2>
         <div class="prices__inner">
           <ul class="prices__list">
-            <div class="prices__item">
+            <div class="prices__item prices__item_first">
               <span class="prices__item-name">
                 
               </span>
@@ -2326,6 +2326,98 @@
               <span class="express"><button class="prices__btn btn-order" data-path="order-popup">Приобрести</button></span>
             </li>
           </ul>
+        </div>
+        <div class="prices-mobile">
+          <div class="prices-mobile__slider">
+            <div class="prices__slide">
+              <div class="prices__slide-top">
+                <span class="prices__name">лайт</span>
+                <div class="prices__price">20 000 &#8381;</div>
+              </div>
+              <!-- <div class="prices__slide-bottom slide-bottom">
+                <p class="slide-bottom__name">Лайт</p>
+                <ul class="slide-bottom__list">
+                  <li class="slide-bottom__item">+ Анализ Вашего сайта и бизнеса</li>
+                  <li class="slide-bottom__item">Создание рекламных материалов и объявлений для Яндекс</li>
+                  <li class="slide-bottom__item"> + Поисковые рекламные кампании (без Сетей)</li>
+                  <li class="slide-bottom__item"> + Подготовка списка минус-слов</li>
+                  <li class="slide-bottom__item"> + UTM-разметка рекламных кампаний</li>
+                  <li class="slide-bottom__item">+ Мониторинг и управление ставками</li>
+                  <li class="slide-bottom__item">+ Корректировки и доработки рекламных кампаний</li>
+                  <li class="slide-bottom__item">+ От 50 до 150 ключевых слов</li>
+                  <li class="slide-bottom__item">+ От 300 до 900 рекламных объявлений</li>
+                  <li class="slide-bottom__item development-time">+ От 300 до 900 рекламных объявлений</li>
+                </ul>
+                <button class="slide-bottom__btn">Приобрести</button>
+              </div> -->
+            </div>
+            <div class="prices__slide">
+              <div class="prices__slide-top">
+                <span class="prices__name">стандарт</span>
+                <div class="prices__price">20 000 &#8381;</div>
+              </div>
+              <!-- <div class="prices__slide-bottom slide-bottom">
+                <p class="slide-bottom__name">Лайт</p>
+                <ul class="slide-bottom__list">
+                  <li class="slide-bottom__item">+ Анализ Вашего сайта и бизнеса</li>
+                  <li class="slide-bottom__item">Создание рекламных материалов и объявлений для Яндекс</li>
+                  <li class="slide-bottom__item"> + Поисковые рекламные кампании (без Сетей)</li>
+                  <li class="slide-bottom__item"> + Подготовка списка минус-слов</li>
+                  <li class="slide-bottom__item"> + UTM-разметка рекламных кампаний</li>
+                  <li class="slide-bottom__item">+ Мониторинг и управление ставками</li>
+                  <li class="slide-bottom__item">+ Корректировки и доработки рекламных кампаний</li>
+                  <li class="slide-bottom__item">+ От 50 до 150 ключевых слов</li>
+                  <li class="slide-bottom__item">+ От 300 до 900 рекламных объявлений</li>
+                  <li class="slide-bottom__item development-time">+ От 300 до 900 рекламных объявлений</li>
+                </ul>
+                <button class="slide-bottom__btn">Приобрести</button>
+              </div> -->
+            </div>
+            <div class="prices__slide">
+              <div class="prices__slide-top">
+                <span class="prices__name">премиум</span>
+                <div class="prices__price">20 000 &#8381;</div>
+              </div>
+              <!-- <div class="prices__slide-bottom slide-bottom">
+                <p class="slide-bottom__name">Лайт</p>
+                <ul class="slide-bottom__list">
+                  <li class="slide-bottom__item">+ Анализ Вашего сайта и бизнеса</li>
+                  <li class="slide-bottom__item">Создание рекламных материалов и объявлений для Яндекс</li>
+                  <li class="slide-bottom__item"> + Поисковые рекламные кампании (без Сетей)</li>
+                  <li class="slide-bottom__item"> + Подготовка списка минус-слов</li>
+                  <li class="slide-bottom__item"> + UTM-разметка рекламных кампаний</li>
+                  <li class="slide-bottom__item">+ Мониторинг и управление ставками</li>
+                  <li class="slide-bottom__item">+ Корректировки и доработки рекламных кампаний</li>
+                  <li class="slide-bottom__item">+ От 50 до 150 ключевых слов</li>
+                  <li class="slide-bottom__item">+ От 300 до 900 рекламных объявлений</li>
+                  <li class="slide-bottom__item development-time">+ От 300 до 900 рекламных объявлений</li>
+                </ul>
+                <button class="slide-bottom__btn">Приобрести</button>
+              </div> -->
+            </div>
+            <div class="prices__slide">
+              <div class="prices__slide-top">
+                <span class="prices__name">экспресс</span>
+                <div class="prices__price">20 000 &#8381;</div>
+              </div>
+              <!-- <div class="prices__slide-bottom slide-bottom">
+                <p class="slide-bottom__name">Лайт</p>
+                <ul class="slide-bottom__list">
+                  <li class="slide-bottom__item">+ Анализ Вашего сайта и бизнеса</li>
+                  <li class="slide-bottom__item">Создание рекламных материалов и объявлений для Яндекс</li>
+                  <li class="slide-bottom__item"> + Поисковые рекламные кампании (без Сетей)</li>
+                  <li class="slide-bottom__item"> + Подготовка списка минус-слов</li>
+                  <li class="slide-bottom__item"> + UTM-разметка рекламных кампаний</li>
+                  <li class="slide-bottom__item">+ Мониторинг и управление ставками</li>
+                  <li class="slide-bottom__item">+ Корректировки и доработки рекламных кампаний</li>
+                  <li class="slide-bottom__item">+ От 50 до 150 ключевых слов</li>
+                  <li class="slide-bottom__item">+ От 300 до 900 рекламных объявлений</li>
+                  <li class="slide-bottom__item development-time">+ От 300 до 900 рекламных объявлений</li>
+                </ul>
+                <button class="slide-bottom__btn">Приобрести</button>
+              </div> -->
+            </div>
+          </div>
         </div>
       </div>
     </div>
