--- a/app/index.html
+++ b/app/index.html
@@ -2328,94 +2328,96 @@
           </ul>
         </div>
         <div class="prices-mobile">
-          <div class="prices-mobile__slider">
+          <div class="prices-mobile__slider-top">
             <div class="prices__slide">
               <div class="prices__slide-top">
                 <span class="prices__name">лайт</span>
                 <div class="prices__price">20 000 &#8381;</div>
               </div>
-              <!-- <div class="prices__slide-bottom slide-bottom">
-                <p class="slide-bottom__name">Лайт</p>
-                <ul class="slide-bottom__list">
-                  <li class="slide-bottom__item">+ Анализ Вашего сайта и бизнеса</li>
-                  <li class="slide-bottom__item">Создание рекламных материалов и объявлений для Яндекс</li>
-                  <li class="slide-bottom__item"> + Поисковые рекламные кампании (без Сетей)</li>
-                  <li class="slide-bottom__item"> + Подготовка списка минус-слов</li>
-                  <li class="slide-bottom__item"> + UTM-разметка рекламных кампаний</li>
-                  <li class="slide-bottom__item">+ Мониторинг и управление ставками</li>
-                  <li class="slide-bottom__item">+ Корректировки и доработки рекламных кампаний</li>
-                  <li class="slide-bottom__item">+ От 50 до 150 ключевых слов</li>
-                  <li class="slide-bottom__item">+ От 300 до 900 рекламных объявлений</li>
-                  <li class="slide-bottom__item development-time">+ От 300 до 900 рекламных объявлений</li>
-                </ul>
-                <button class="slide-bottom__btn">Приобрести</button>
-              </div> -->
             </div>
             <div class="prices__slide">
               <div class="prices__slide-top">
                 <span class="prices__name">стандарт</span>
                 <div class="prices__price">20 000 &#8381;</div>
               </div>
-              <!-- <div class="prices__slide-bottom slide-bottom">
-                <p class="slide-bottom__name">Лайт</p>
-                <ul class="slide-bottom__list">
-                  <li class="slide-bottom__item">+ Анализ Вашего сайта и бизнеса</li>
-                  <li class="slide-bottom__item">Создание рекламных материалов и объявлений для Яндекс</li>
-                  <li class="slide-bottom__item"> + Поисковые рекламные кампании (без Сетей)</li>
-                  <li class="slide-bottom__item"> + Подготовка списка минус-слов</li>
-                  <li class="slide-bottom__item"> + UTM-разметка рекламных кампаний</li>
-                  <li class="slide-bottom__item">+ Мониторинг и управление ставками</li>
-                  <li class="slide-bottom__item">+ Корректировки и доработки рекламных кампаний</li>
-                  <li class="slide-bottom__item">+ От 50 до 150 ключевых слов</li>
-                  <li class="slide-bottom__item">+ От 300 до 900 рекламных объявлений</li>
-                  <li class="slide-bottom__item development-time">+ От 300 до 900 рекламных объявлений</li>
-                </ul>
-                <button class="slide-bottom__btn">Приобрести</button>
-              </div> -->
             </div>
             <div class="prices__slide">
               <div class="prices__slide-top">
                 <span class="prices__name">премиум</span>
                 <div class="prices__price">20 000 &#8381;</div>
               </div>
-              <!-- <div class="prices__slide-bottom slide-bottom">
-                <p class="slide-bottom__name">Лайт</p>
-                <ul class="slide-bottom__list">
-                  <li class="slide-bottom__item">+ Анализ Вашего сайта и бизнеса</li>
-                  <li class="slide-bottom__item">Создание рекламных материалов и объявлений для Яндекс</li>
-                  <li class="slide-bottom__item"> + Поисковые рекламные кампании (без Сетей)</li>
-                  <li class="slide-bottom__item"> + Подготовка списка минус-слов</li>
-                  <li class="slide-bottom__item"> + UTM-разметка рекламных кампаний</li>
-                  <li class="slide-bottom__item">+ Мониторинг и управление ставками</li>
-                  <li class="slide-bottom__item">+ Корректировки и доработки рекламных кампаний</li>
-                  <li class="slide-bottom__item">+ От 50 до 150 ключевых слов</li>
-                  <li class="slide-bottom__item">+ От 300 до 900 рекламных объявлений</li>
-                  <li class="slide-bottom__item development-time">+ От 300 до 900 рекламных объявлений</li>
-                </ul>
-                <button class="slide-bottom__btn">Приобрести</button>
-              </div> -->
             </div>
             <div class="prices__slide">
               <div class="prices__slide-top">
                 <span class="prices__name">экспресс</span>
                 <div class="prices__price">20 000 &#8381;</div>
               </div>
-              <!-- <div class="prices__slide-bottom slide-bottom">
-                <p class="slide-bottom__name">Лайт</p>
-                <ul class="slide-bottom__list">
-                  <li class="slide-bottom__item">+ Анализ Вашего сайта и бизнеса</li>
-                  <li class="slide-bottom__item">Создание рекламных материалов и объявлений для Яндекс</li>
-                  <li class="slide-bottom__item"> + Поисковые рекламные кампании (без Сетей)</li>
-                  <li class="slide-bottom__item"> + Подготовка списка минус-слов</li>
-                  <li class="slide-bottom__item"> + UTM-разметка рекламных кампаний</li>
-                  <li class="slide-bottom__item">+ Мониторинг и управление ставками</li>
-                  <li class="slide-bottom__item">+ Корректировки и доработки рекламных кампаний</li>
-                  <li class="slide-bottom__item">+ От 50 до 150 ключевых слов</li>
-                  <li class="slide-bottom__item">+ От 300 до 900 рекламных объявлений</li>
-                  <li class="slide-bottom__item development-time">+ От 300 до 900 рекламных объявлений</li>
-                </ul>
-                <button class="slide-bottom__btn">Приобрести</button>
-              </div> -->
+            </div>
+          </div>
+          <div class="prices-mobile__slider-bottom">
+            <div class="prices__slide-bottom slide-bottom">
+              <p class="slide-bottom__name">Лайт</p>
+              <ul class="slide-bottom__list">
+                <li class="slide-bottom__item">+ Анализ Вашего сайта и бизнеса</li>
+                <li class="slide-bottom__item">Создание рекламных материалов и объявлений для Яндекс</li>
+                <li class="slide-bottom__item"> + Поисковые рекламные кампании (без Сетей)</li>
+                <li class="slide-bottom__item"> + Подготовка списка минус-слов</li>
+                <li class="slide-bottom__item"> + UTM-разметка рекламных кампаний</li>
+                <li class="slide-bottom__item">+ Мониторинг и управление ставками</li>
+                <li class="slide-bottom__item">+ Корректировки и доработки рекламных кампаний</li>
+                <li class="slide-bottom__item">+ От 50 до 150 ключевых слов</li>
+                <li class="slide-bottom__item">+ От 300 до 900 рекламных объявлений</li>
+                <li class="slide-bottom__item development-time">+ От 300 до 900 рекламных объявлений</li>
+              </ul>
+              <button class="slide-bottom__btn">Приобрести</button>
+            </div>
+            <div class="prices__slide-bottom slide-bottom">
+              <p class="slide-bottom__name">Стандарт</p>
+              <ul class="slide-bottom__list">
+                <li class="slide-bottom__item">+ Анализ Вашего сайта и бизнеса</li>
+                <li class="slide-bottom__item">Создание рекламных материалов и объявлений для Яндекс</li>
+                <li class="slide-bottom__item"> + Поисковые рекламные кампании (без Сетей)</li>
+                <li class="slide-bottom__item"> + Подготовка списка минус-слов</li>
+                <li class="slide-bottom__item"> + UTM-разметка рекламных кампаний</li>
+                <li class="slide-bottom__item">+ Мониторинг и управление ставками</li>
+                <li class="slide-bottom__item">+ Корректировки и доработки рекламных кампаний</li>
+                <li class="slide-bottom__item">+ От 50 до 150 ключевых слов</li>
+                <li class="slide-bottom__item">+ От 300 до 900 рекламных объявлений</li>
+                <li class="slide-bottom__item development-time">+ От 300 до 900 рекламных объявлений</li>
+              </ul>
+              <button class="slide-bottom__btn">Приобрести</button>
+            </div>
+            <div class="prices__slide-bottom slide-bottom">
+              <p class="slide-bottom__name">Премиум</p>
+              <ul class="slide-bottom__list">
+                <li class="slide-bottom__item">+ Анализ Вашего сайта и бизнеса</li>
+                <li class="slide-bottom__item">Создание рекламных материалов и объявлений для Яндекс</li>
+                <li class="slide-bottom__item"> + Поисковые рекламные кампании (без Сетей)</li>
+                <li class="slide-bottom__item"> + Подготовка списка минус-слов</li>
+                <li class="slide-bottom__item"> + UTM-разметка рекламных кампаний</li>
+                <li class="slide-bottom__item">+ Мониторинг и управление ставками</li>
+                <li class="slide-bottom__item">+ Корректировки и доработки рекламных кампаний</li>
+                <li class="slide-bottom__item">+ От 50 до 150 ключевых слов</li>
+                <li class="slide-bottom__item">+ От 300 до 900 рекламных объявлений</li>
+                <li class="slide-bottom__item development-time">+ От 300 до 900 рекламных объявлений</li>
+              </ul>
+              <button class="slide-bottom__btn">Приобрести</button>
+            </div>
+            <div class="prices__slide-bottom slide-bottom">
+              <p class="slide-bottom__name">Экспресс</p>
+              <ul class="slide-bottom__list">
+                <li class="slide-bottom__item">+ Анализ Вашего сайта и бизнеса</li>
+                <li class="slide-bottom__item">Создание рекламных материалов и объявлений для Яндекс</li>
+                <li class="slide-bottom__item"> + Поисковые рекламные кампании (без Сетей)</li>
+                <li class="slide-bottom__item"> + Подготовка списка минус-слов</li>
+                <li class="slide-bottom__item"> + UTM-разметка рекламных кампаний</li>
+                <li class="slide-bottom__item">+ Мониторинг и управление ставками</li>
+                <li class="slide-bottom__item">+ Корректировки и доработки рекламных кампаний</li>
+                <li class="slide-bottom__item">+ От 50 до 150 ключевых слов</li>
+                <li class="slide-bottom__item">+ От 300 до 900 рекламных объявлений</li>
+                <li class="slide-bottom__item development-time">+ От 300 до 900 рекламных объявлений</li>
+              </ul>
+              <button class="slide-bottom__btn">Приобрести</button>
             </div>
           </div>
         </div>
