--- a/app/index.html
+++ b/app/index.html
@@ -2028,7 +2028,7 @@
         </div>
       </div>
     </div>
-    <!-- <div class="sertificats">
+    <div class="sertificats">
       <div class="container">
         <h2 class="sertificats__title">Сертификаты</h2>
         <div class="sertificats__inner">
@@ -2042,7 +2042,7 @@
           </div>
         </div>
       </div>
-    </div> -->
+    </div>
     <div class="prices media">
       <div class="container">
         <h2 class="prices__title">Тарифы и пакеты</h2>
@@ -2338,19 +2338,19 @@
             <div class="prices__slide">
               <div class="prices__slide-top">
                 <span class="prices__name">стандарт</span>
-                <div class="prices__price">20 000 &#8381;</div>
+                <div class="prices__price">35 000 &#8381;</div>
               </div>
             </div>
             <div class="prices__slide">
               <div class="prices__slide-top">
                 <span class="prices__name">премиум</span>
-                <div class="prices__price">20 000 &#8381;</div>
+                <div class="prices__price">50 000 &#8381;</div>
               </div>
             </div>
             <div class="prices__slide">
               <div class="prices__slide-top">
                 <span class="prices__name">экспресс</span>
-                <div class="prices__price">20 000 &#8381;</div>
+                <div class="prices__price">10 000 &#8381;</div>
               </div>
             </div>
           </div>
@@ -2359,66 +2359,91 @@
               <p class="slide-bottom__name">Лайт</p>
               <ul class="slide-bottom__list">
                 <li class="slide-bottom__item">+ Анализ Вашего сайта и бизнеса</li>
-                <li class="slide-bottom__item">Создание рекламных материалов и объявлений для Яндекс</li>
-                <li class="slide-bottom__item"> + Поисковые рекламные кампании (без Сетей)</li>
-                <li class="slide-bottom__item"> + Подготовка списка минус-слов</li>
-                <li class="slide-bottom__item"> + UTM-разметка рекламных кампаний</li>
+                <li class="slide-bottom__item">+ Создание рекламных материалов и объявлений для Яндекс</li>
+                <li class="slide-bottom__item">+ Поисковые рекламные кампании (без Сетей)</li>
+                <li class="slide-bottom__item">+ Подготовка списка минус-слов</li>
+                <li class="slide-bottom__item">+ UTM-разметка рекламных кампаний</li>
                 <li class="slide-bottom__item">+ Мониторинг и управление ставками</li>
                 <li class="slide-bottom__item">+ Корректировки и доработки рекламных кампаний</li>
                 <li class="slide-bottom__item">+ От 50 до 150 ключевых слов</li>
                 <li class="slide-bottom__item">+ От 300 до 900 рекламных объявлений</li>
-                <li class="slide-bottom__item development-time">+ От 300 до 900 рекламных объявлений</li>
+                <li class="slide-bottom__item development-time">Время разработки: 1-3 рабочих дней</li>
               </ul>
-              <button class="slide-bottom__btn">Приобрести</button>
+              <button class="slide-bottom__btn btn-order" data-path="order-popup">Приобрести</button>
             </div>
             <div class="prices__slide-bottom slide-bottom">
               <p class="slide-bottom__name">Стандарт</p>
               <ul class="slide-bottom__list">
                 <li class="slide-bottom__item">+ Анализ Вашего сайта и бизнеса</li>
-                <li class="slide-bottom__item">Создание рекламных материалов и объявлений для Яндекс</li>
-                <li class="slide-bottom__item"> + Поисковые рекламные кампании (без Сетей)</li>
-                <li class="slide-bottom__item"> + Подготовка списка минус-слов</li>
-                <li class="slide-bottom__item"> + UTM-разметка рекламных кампаний</li>
+                <li class="slide-bottom__item">+ Создание рекламных материалов и объявлений для Яндекс</li>
+                <li class="slide-bottom__item">+ Рекламные кампании для Поиска и Сетей</li>
+                <li class="slide-bottom__item">+ Подготовка списка минус-слов</li>
+                <li class="slide-bottom__item">+ Кластеризация семантического ядра</li>
+                <li class="slide-bottom__item">+ UTM-разметка рекламных кампаний</li>
                 <li class="slide-bottom__item">+ Мониторинг и управление ставками</li>
                 <li class="slide-bottom__item">+ Корректировки и доработки рекламных кампаний</li>
-                <li class="slide-bottom__item">+ От 50 до 150 ключевых слов</li>
-                <li class="slide-bottom__item">+ От 300 до 900 рекламных объявлений</li>
-                <li class="slide-bottom__item development-time">+ От 300 до 900 рекламных объявлений</li>
+                <li class="slide-bottom__item">+ Настройка ремаркетинга и ретаргетинга</li>
+                <li class="slide-bottom__item">+ Установка счетчиков веб-аналитики</li>
+                <li class="slide-bottom__item">+ Настройка целевых действий и конверсий</li>
+                <li class="slide-bottom__item">+ 2 недели ведения кампаний бесплатно</li>
+                <li class="slide-bottom__item">+ От 150 до 300 ключевых слов</li>
+                <li class="slide-bottom__item">+ От 900 до 1 800 рекламных объявлений</li>
+                <li class="slide-bottom__item development-time">Время разработки: 3-5 рабочих дней</li>
+                <li class="slide-bottom__item installment">* Рассрочка оплаты</li>
               </ul>
-              <button class="slide-bottom__btn">Приобрести</button>
+              <button class="slide-bottom__btn btn-order" data-path="order-popup">Приобрести</button>
             </div>
             <div class="prices__slide-bottom slide-bottom">
               <p class="slide-bottom__name">Премиум</p>
               <ul class="slide-bottom__list">
                 <li class="slide-bottom__item">+ Анализ Вашего сайта и бизнеса</li>
-                <li class="slide-bottom__item">Создание рекламных материалов и объявлений для Яндекс</li>
-                <li class="slide-bottom__item"> + Поисковые рекламные кампании (без Сетей)</li>
-                <li class="slide-bottom__item"> + Подготовка списка минус-слов</li>
-                <li class="slide-bottom__item"> + UTM-разметка рекламных кампаний</li>
+                <li class="slide-bottom__item">+ Создание рекламных материалов и объявлений для Яндекс</li>
+                <li class="slide-bottom__item">+ Рекламные кампании для Поиска и Сетей</li>
+                <li class="slide-bottom__item">+ Подготовка списка минус-слов</li>
+                <li class="slide-bottom__item">+ Подробная кластеризация семантического ядра</li>
+                <li class="slide-bottom__item">+ UTM-разметка рекламных кампаний (углубленная)</li>
                 <li class="slide-bottom__item">+ Мониторинг и управление ставками</li>
                 <li class="slide-bottom__item">+ Корректировки и доработки рекламных кампаний</li>
-                <li class="slide-bottom__item">+ От 50 до 150 ключевых слов</li>
-                <li class="slide-bottom__item">+ От 300 до 900 рекламных объявлений</li>
-                <li class="slide-bottom__item development-time">+ От 300 до 900 рекламных объявлений</li>
+                <li class="slide-bottom__item">+ Отдельные десктопные и мобильные рекламные кампании</li>
+                <li class="slide-bottom__item">+ Настройка ремаркетинга и ретаргетинга</li>
+                <li class="slide-bottom__item">+ Разработка Look-Alike рекламных кампаний</li>
+                <li class="slide-bottom__item">+ Установка счетчиков веб-аналитики</li>
+                <li class="slide-bottom__item">+ Настройка целевых действий и конверсий</li>
+                <li class="slide-bottom__item">+ Установка и настройка Google Tag Manager</li>
+                <li class="slide-bottom__item">+ Углубленная веб-аналитика сайта</li>
+                <li class="slide-bottom__item">+ Настройка пользовательских и аудиторных сегментов</li>
+                <li class="slide-bottom__item">+ Сопровождение в установке онлайн-чатов и др. сервисов</li>
+                <li class="slide-bottom__item">+ Сопровождение в выборе и настройке коллтрекинга</li>
+                <li class="slide-bottom__item">+ Рекомендации по оптимизации Вашего сайта</li>
+                <li class="slide-bottom__item">+ Месяц ведения кампаний бесплатно</li>
+                <li class="slide-bottom__item">+ От 300 до 1 000 и более ключевых слов</li>
+                <li class="slide-bottom__item">+ От 1 800 до 6 000 и более рекламных объявлений</li>
+                <li class="slide-bottom__item development-time">Время разработки: 5+ рабочих дней</li>
+                <li class="slide-bottom__item installment">* Рассрочка оплаты</li>
               </ul>
-              <button class="slide-bottom__btn">Приобрести</button>
+              <button class="slide-bottom__btn btn-order" data-path="order-popup">Приобрести</button>
             </div>
             <div class="prices__slide-bottom slide-bottom">
               <p class="slide-bottom__name">Экспресс</p>
               <ul class="slide-bottom__list">
                 <li class="slide-bottom__item">+ Анализ Вашего сайта и бизнеса</li>
-                <li class="slide-bottom__item">Создание рекламных материалов и объявлений для Яндекс</li>
-                <li class="slide-bottom__item"> + Поисковые рекламные кампании (без Сетей)</li>
-                <li class="slide-bottom__item"> + Подготовка списка минус-слов</li>
-                <li class="slide-bottom__item"> + UTM-разметка рекламных кампаний</li>
+                <li class="slide-bottom__item">+ Создание рекламных материалов и объявлений для Яндекс</li>
+                <li class="slide-bottom__item">+ Поисковые рекламные кампании</li>
+                <li class="slide-bottom__item">+ Рекламные кампании для Сетей</li>
+                <li class="slide-bottom__item">+ Подготовка списка минус-слов</li>
+                <li class="slide-bottom__item">+ Кластеризация семантического ядра</li>
+                <li class="slide-bottom__item">+ UTM-разметка рекламных кампаний</li>
                 <li class="slide-bottom__item">+ Мониторинг и управление ставками</li>
-                <li class="slide-bottom__item">+ Корректировки и доработки рекламных кампаний</li>
-                <li class="slide-bottom__item">+ От 50 до 150 ключевых слов</li>
-                <li class="slide-bottom__item">+ От 300 до 900 рекламных объявлений</li>
-                <li class="slide-bottom__item development-time">+ От 300 до 900 рекламных объявлений</li>
+                <li class="slide-bottom__item development-time">2 рабочих дня</li>
               </ul>
-              <button class="slide-bottom__btn">Приобрести</button>
+              <button class="slide-bottom__btn btn-order" data-path="order-popup">Приобрести</button>
             </div>
+          </div>
+        </div>
+        <div class="prices__sales">
+          <div class="prices__sale">
+            <p class="prices__sale-condition">Реклама + сайт</p>
+            <p class="prices__sale-sale">Скидка 30% на сайт</p>
           </div>
         </div>
       </div>
