--- a/app/index.html
+++ b/app/index.html
@@ -2445,6 +2445,14 @@
             <p class="prices__sale-condition">Реклама + сайт</p>
             <p class="prices__sale-sale">Скидка 30% на сайт</p>
           </div>
+          <div class="prices__sale">
+            <p class="prices__sale-condition">Сайт + контент</p>
+            <p class="prices__sale-sale">Скидка 30% на сайт</p>
+          </div>
+          <div class="prices__sale">
+            <p class="prices__sale-condition">Реклама + сайт контент</p>
+            <p class="prices__sale-sale">Скидка 50% на сайт</p>
+          </div>
         </div>
       </div>
     </div>
@@ -2523,16 +2531,9 @@
         <div class="footer__inner">
           <h2 class="footer__title">Оставьте заявку, подготовим предложение и поможем определиться с выбором услуг
           </h2>
-          <div class="footer__links">
-            <div class="footer__links-row">
-              <a href="#" class="footer__link">order@savov.ru</a>
-              <a href="#" class="footer__link">в telegram</a>
-            </div>
-            <div class="footer__links-row">
-              <a href="#" class="footer__link">в whatsapp</a>
-              <a href="tel:79006566903" class="footer__link">+7 900 656 69 03</a>
-            </div>
-          </div>
+            <a href="#" class="footer__link footer__link_whatsapp">в whatsapp</a>
+            <a href="mailto:order@savov.ru" class="footer__link footer__link_mail">order@savov.ru</a>
+            <a href="#" class="footer__link footer__link_telegram">в telegram</a>
         </div>
         <div class="footer__form-wrapper">
           <form action="" class="footer__form form">
